--- a/style.css
+++ b/style.css
@@ -1,6 +1,67 @@
+body {
+    margin: 0;
+    background-color: hsl(212, 45%, 89%);
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+    min-height: 100vh;
+    margin-bottom: -5em;
+}
+
+.screen {
+    height: 95vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+}
+
+.container {
+    min-height: 400px;
+    min-width: 280px;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: -10px 20px 50px hsl(219, 15%, 80%) ;
+    flex-shrink: 0;
+    
+}
+
+.qr {
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    margin-top: 5%;
+}
+
+p {
+    font-family: Outfit;
+    text-align: center;
+    max-width: 200px;
+    margin-top: 10px;
+}
+
+.strong{
+    font-weight: 700;
+    font-size: 17px;
+
+}
+
+.light {
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
+    font-size: 12px;
+}
+
 .attribution { 
+    
     font-size: 11px;
     text-align: center; 
+    margin-top: auto;
+    height : 5em;
+    margin-bottom: 0px;
 }
     .attribution a {
          color: hsl(228, 45%, 44%); 
